fixed login button overlap

--- a/client/components/toolbar/toolbar.css
+++ b/client/components/toolbar/toolbar.css
@@ -1,3 +1,14 @@
+#login-buttons {
+  margin-left: -10px;
+  margin-top: 15px;
+}
+
+.login-icon {
+  font-size: 1.5em;
+  padding-top: .4em;
+  padding-left: .5em;
+}
+
 .login-link-text {
-	color: white;
+  color: transparent;
 }
